# tinyurdfparser

./: .cppcheck-suppressions  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
TinyURDFParser/: KDLRobot.cpp  TinyURDFParser.cpp  bindings.cpp
cmake/: TinyURDFParserConfig.cmake
examples/: CMakeLists.txt  kdl_robot.py  kdl_robot_example.cpp  panda.urdf  test_kc.py  urdf_parser_example.cpp
include/TinyURDFParser/: KDLRobot.hpp  TinyURDFParser.hpp  TinyURDFParser_config.h.in
tests/: CMakeLists.txt  simple_robot.urdf  test_config.h.in  test_urdf.cpp  wrong_robot.urdf
